<resources>
    <string name="app_name">cinqueterreriviera</string>

    <string name="cinqueterreriveria">Cinqueterreriviera</string>
    <string name="please_wait">Please wait...</string>
    <string name="pick_your_location">Pick Your Location</string>
    <string name="welcome_to_cinqueterreriveria_com">Welcome to <b>Cinqueterreriviera.com</b></string>
    <string name="login_to_continue_your_account">Login to continue your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="accommodation">Accommodation</string>
    <string name="experience">Experiences</string>
    <string name="services">Services</string>
    <string name="blog">Blog</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="discover_the_cinque_terre_with_us">Discover The Cinque Terre With Us</string>
    <string name="starting_from">Starting from</string>
    <string name="book_unique_experience">Book Unique Experience</string>
    <string name="what_to_do">What to do</string>
    <string name="get_the_cinque_terre_with_us">Get The Cinque Terre With Us</string>
    <string name="get_the_most_of_your_cinque_terre_riviera_holiday">Get The Most Of Your Cinque Terre Riviera Holiday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read More</string>
    <string name="train">Train</string>
    <string name="located_in_the_very_heart_of_vernazza_in_via_roma_24_along_the_main_road_just_a_few_meters_from_the_train_station_and_the_main_square_to_your_left_going_downhill_it_s_so_easy_to_find_us_if_you_want_to_meet_us_plan_special_event_or_get_more_info_about_our_services_come_visit_us_this_is_one_more_reason_to_trust_us_we_are_right_there_in_the_very_heart_of_the_cinque_terre">Located in the very heart of Vernazza, in Via Roma 24, along the main road, just a few meters from the train station and the main square. To your left going downhill. It\'s so easy to find us! If you want to meet us, plan special event or get more info about our services, come visit us. This is one more reason to trust us... we are right there, in the very heart of the Cinque Terre!</string>
    <string name="search_location">Search location</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check out</string>
    <string name="search">Search</string>
    <string name="starting_from_price">Starting From </string>
    <string name="details">Details</string>
    <string name="minimum_stay">Minimum Stay:</string>
    <string name="smoking">Smoking:</string>
    <string name="check_in_time">Check-In Time :</string>
    <string name="garbage_collection">Garbage Collection :</string>
    <string name="pets">Pets :</string>
    <string name="check_out_time">Check-Out Time :</string>
    <string name="property_rates">Property Rates</string>
    <string name="daily">Daily</string>
    <string name="min_stay">Min Stay</string>
    <string name="low_season">Low Season</string>
    <string name="mid_season">Mid Season</string>
    <string name="high_season">High Season</string>
    <string name="charges">Charges</string>
    <string name="amount">Amount</string>
    <string name="opera_festival">Opera Festival</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="search_deal_now">Search Deal Now</string>
    <string name="the_plus_of_a_travel_insurance">The Plus of a Travel Insurance</string>
    <string name="all_you_need_to_know_about_the_cinque_terre_true_and_fine_advice_written_and_explained_by_the_locals_no_second_hand_news_but_facts_the_real_practical_truth_to_live_the_place_as_a_local_and_manage_through_trains_car_parking_spots_traditions_festivities_restaurants_and_food_all_your_questions_will_find_and_answer_just_surf_through_our_pages_but_if_not_send_us_a_mail_and_get_further_advice">All you need to know about the Cinque Terre, true and fine advice written and explained<b> by the locals!</b> No second hand news, but <b>FACTS</b>, the real practical truth to live the place as a local and manage through trains, car parking spots, traditions, festivities, restaurants and food. All your questions will find and answer, just surf through our pages, but, if not, send us a mail and get further advice.</string>
    <string name="cinque_terre_villages_tips">Cinque Terre Villages Tips</string>
    <string name="traditions">Traditions</string>
    <string name="book_now">BOOK NOW</string>
    <string name="mail_your_love_proposal_project_to_info_cinqueterreriviera_com">MAIL YOUR LOVE PROPOSAL PROJECT TO INFO@CINQUETERRERIVIERA.COM</string>
    <string name="the_first_move">The First Move</string>
    <string name="additional_charges">Additional Charges</string>
    <string name="direct_book">Direct Book</string>
    <string name="pre_book">Pre Book</string>
    <string name="request_book">Request Book</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="bank_wire_transfer">Bank Wire Transfer</string>
    <string name="next">Next</string>
    <string name="booking_request_have_been_successfully_placed">Booking Request have been successfully placed.</string>
    <string name="thank_you">Thank you</string>
    <string name="lost_your_password_please_enter_your_username_or_email_addrees_you_will_receive_a_link_to_create_a_new_password_via_email">Lost Your Password? Please enter your Email address You Will receive a link to create a new Password via email.</string>
    <string name="username_or_email">Username or email</string>
    <string name="a_link_has_been_sent_to_your_email_account_plesae_check_your_email_to_continue">A link has been sent to your email account. Please check your Email to continue..</string>
    <string name="we_are_redirection_you_back_to_the_home_screen_please_wait">We are Redirection you back to the Home Screen.Please wait..</string>
    <string name="how_to_reach_us">How to reach us!</string>
    <string name="trips_you_have_booked">Trips You Have Booked</string>
    <string name="not_found">Not Found</string>
    <string name="all_you_need_to_know_to_survive_the_cinque_terre">All You need to know to survive the Cinque Terre !</string>
    <string name="edit_cards">Edit Cards</string>
    <string name="edit_card">Edit Card</string>
    <string name="filter">Filter</string>
    <string name="submit">Submit</string>

</resources>
