<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ForgetPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/lost_your_password_please_enter_your_username_or_email_addrees_you_will_receive_a_link_to_create_a_new_password_via_email"
        android:textColor="@color/grey_opcy"
        android:textSize="@dimen/_14ssp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"

        android:layout_marginEnd="@dimen/_20sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:fontFamily="@fonts/roboto_lightitalic.ttf"
            android:gravity="start"
            android:hint="@string/username_or_email"
            android:textCursorDrawable="@color/dark_grey"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_12ssp"
            android:singleLine="true"
            android:textColor="@color/dark_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_forget_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@drawable/solid_orange"
        />

</LinearLayout>