<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_bottom"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dashboard_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_left_arrow" />

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:contentDescription="@null"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv_accomodation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text="@string/accommodation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_accomodation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_experience"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text="@string/experience" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_services"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text="@string/services" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_blog"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text="@string/blog" />

            <TextView
                android:id="@+id/tv_contact_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:text="@string/contact_us" />

            <TextView
                android:id="@+id/tv_faq"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="F.A.Q" />

            <TextView
                android:id="@+id/tv_MyAccount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:visibility="gone"
                android:text="My Account" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/logout" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>