<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:layout_height="wrap_content">

    <ImageView
        android:contentDescription="@null"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/dummy"
        android:scaleType="fitXY"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="@dimen/_10sdp"

        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:background="@drawable/stroke_grey_rect"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_plus_of_a_travel_insurance"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_margin="@dimen/_12sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_you_need_to_know_about_the_cinque_terre_true_and_fine_advice_written_and_explained_by_the_locals_no_second_hand_news_but_facts_the_real_practical_truth_to_live_the_place_as_a_local_and_manage_through_trains_car_parking_spots_traditions_festivities_restaurants_and_food_all_your_questions_will_find_and_answer_just_surf_through_our_pages_but_if_not_send_us_a_mail_and_get_further_advice"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_10ssp"/>

            <TextView
                android:id="@+id/tv_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_more"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>