<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PaymentTypeActivity">

    <include layout="@layout/app_bar" />

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="gone"
        android:background="@color/light_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:contentDescription="@null"
            android:src="@drawable/logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Cinqueterreriveria"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_20ssp" />


        <Button
            android:id="@+id/bt_direct_book"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/solid_orange"
            android:text="@string/direct_book"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_preBooking"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/solid_orange"
            android:text="@string/pre_book"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_request_booking"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/solid_orange"
            android:text="@string/request_book"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>