<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PaymentMethodActivity">

    <include layout="@layout/app_bar"/>

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:contentDescription="@null"
            android:src="@drawable/logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Cinqueterreriveria"
            android:visibility="gone"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_payment_method"
            android:textColor="@color/grey_opcy"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:textSize="@dimen/_18ssp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <RadioButton
                android:id="@+id/rb_wire_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_wire_transfer"/>

            <RadioButton
                android:id="@+id/rb_debit_credit"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Debit/Credit Card Payment"/>
        </RadioGroup>


        <RelativeLayout
            android:id="@+id/rl_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/solid_orange"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right_arro"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_centerVertical="true"/>



        </RelativeLayout>




    </LinearLayout>




</LinearLayout>